--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>환빈이에게</title>
+    <title>Document</title>
 </head>
 <body>
-    <d1>고생했어</d1>
+    <d1>환빈이 오늘 하루도 고생했어!</d1>
+    <d1>오늘 하루 마무리 잘하구, 푹 쉬어!</d1>
 </body>
 </html>
