--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>환빈이에게</title>
 </head>
 <body>
-    <d1>환빈이 오늘 하루도 고생했어!</d1>
+    <d1>오늘 하루도 고생 많았어!</d1>
+    <br>
     <d1>오늘 하루 마무리 잘하구, 푹 쉬어!</d1>
 </body>
 </html>
