--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <d1>오늘 하루도 고생 많았어!</d1>
     <br>
-    <d1>오늘 하루 마무리 잘하구, 푹 쉬어!</d1>
+    <d1>오늘 하루 마무리 잘하구, 푹 쉬고,</d1>
+    <br>
+    <d1>내일 금요일인만큼 우리 같이 힘내보자구!</d1>
 </body>
 </html>
