--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>환빈이에게</title>
 </head>
 <body>
-    <d1>오늘 하루도 고생 많았어!</d1>
+    <d1>환빈이 오늘 컨디션 안좋았는데, 시간 내줘서 고마웠어!</d1>
     <br>
-    <d1>오늘 하루 마무리 잘하구, 푹 쉬고,</d1>
+    <d1>집 조심히 잘 들어가구, 이 비타민 먹고 기운 좀 찾았으면 좋겠다.</d1>
     <br>
-    <d1>내일 금요일인만큼 우리 같이 힘내보자구!</d1>
+    <d1>항상 이렇게 신경 써줘서 고맙고, 옆에서 든든한 버팀목이 되어주지 못하는 거 같아서 미안하구나,</d1>
 </body>
 </html>
