--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <title>환빈이에게</title>
 </head>
 <body>
-    <d1>환빈이 오늘 컨디션 안좋았는데, 시간 내줘서 고마웠어!</d1>
+    
+    <h1>환빈아!</h1>
+    <style>
+        h1{font-size: 20;}
+    </style>
+    <style></style>
     <br>
-    <d1>집 조심히 잘 들어가구, 이 비타민 먹고 기운 좀 찾았으면 좋겠다.</d1>
     <br>
-    <d1>항상 이렇게 신경 써줘서 고맙고, 옆에서 든든한 버팀목이 되어주지 못하는 거 같아서 미안하구나,</d1>
+    <p>컨디션 안좋은 상태에서 시간 내줘서 고마웠어</p>
+    <br>
+    <br>
+    <p>집 조심히 잘 들어가구, <br> 이 비타민 먹고 기운 좀 찾았으면 좋겠다.</p>
+    <br>
+    <p>항상 이렇게 신경 써줘서 고맙고, <br>옆에서 든든한 버팀목이 되어주지 못하는 거 같아서 미안하구나,</p>
+    <style>
+        p{font-size: 15;}
+    </style>
 </body>
 </html>
